crates/raster/tests/ui/recur_tile_missing_draft.stderr
error: custom attribute panicked
 --> tests/ui/recur_tile_missing_draft.rs:9:1
  |
9 | #[tile(kind = recur)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `#[tile(kind = recur)]` tiles must accept at least `(input, state)` or `(input, output)`
